infrastructure/network/resources.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: application-ingress
spec:
  endpointSelector:
    matchExpressions:
    - key: k8s:io.kubernetes.pod.namespace
      operator: NotIn
      values:
      - kube-system
      - kube-public
      - kube-node-lease
      - flux-system
      - longhorn-system
      - cnpg-system
      - cert-manager
      - kyverno
      - envoy-gateway-system
      - gpu-system
      - identity
      - authorization
      - edge
      - monitoring
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: envoy-gateway-system
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  endpointSelector:
    matchLabels:
      app: longhorn-ui
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: envoy-gateway-system
    toPorts:
    - ports:
      - port: '8000'
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: longhorn-internal
  namespace: longhorn-system
spec:
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: longhorn-system
  - fromEntities:
    - host
    - remote-node
    - kube-apiserver
